Trying out Java 10 collection changes